# cakengine

./: cake-ngine.sln
Carrot/: CMakeLists.txt  Carrot.vcxproj  Carrot.vcxproj.filters  Game.h  dialogue.h  main.cpp  notes.h
Carrot/components/: Background.h  Collidble.h  Player.h  Render.h
Carrot/dialogue/: 00t.txt  0d1.txt  0d2.txt  0d3.txt  0d4.txt  11.txt  22t.txt  33t.txt  44t.txt
Carrot/dialogue/0/: 10.txt  11.txt  120.txt  121.txt  13.txt  20.txt  21.txt  220.txt  221.txt  23.txt  30.txt  31.txt  320.txt  321.txt  33.txt
Carrot/dialogue/1/: 10.txt  11.txt  120.txt  121.txt  13.txt  20.txt  21.txt  220.txt  221.txt  23.txt  30.txt  31.txt  320.txt  321.txt  33.txt
Carrot/dialogue/2/: 10.txt  11.txt  120.txt  121.txt  13.txt  20.txt  21.txt  220.txt  221.txt  23.txt  30.txt  31.txt  320.txt  321.txt  33.txt
Carrot/dialogue/3/: 10.txt  11.txt  120.txt  13.txt  30.txt  31.txt  320.txt  321.txt  33.txt  40.txt  41.txt  420.txt  421.txt  43.txt
Carrot/dialogue/4/: 10.txt  30.txt  31.txt  40.txt  41.txt  43.txt
Carrot/dialogue/decisions/: 0dconf.txt  1dconf.txt  2dconf.txt  3dconf.txt  4econf.txt  4lconf.txt
Carrot/dialogue/decisions/0/: 11dec.txt  (+2 more)
Carrot/managers/: AudioMngr.cpp  AudioMngr.h  DecisionMngr.cpp  DecisionMngr.h  InnerDialogueMngr.cpp  InnerDialogueMngr.h  LevelMngr.cpp  LevelMngr.h  MinigameMngr.cpp  MinigameMngr.h  ScreenMngr.cpp  ScreenMngr.h  TransitionMngr.cpp  TransitionMngr.h
Carrot/systems/: CollisionSystem.cpp  DialogueSystem.cpp  DialogueSystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  RenderSystem.cpp  RenderSystem.h
(+83 files in other folders)
